[package]
name = "ssith"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes = "0.8.3"
ctr = "0.9.2"
sha3 = "0.10.8"
thiserror = "1"
serde = { version = "1.0", features = ["derive"] }
hex = { version = "0.4", features = ["serde"] }

# getrandom feature is needed for from_entropy
rand_core = { version = "0.6", features = ["getrandom"]}

[dev-dependencies]
rand_chacha = "0.3"
serde_json = "1"
